--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
   "description": "Web of Things implementation based on node.js and typescript",
   "main": "dist/main.js",
   "scripts": {
-    "test": "node dist/examples/main.js",
-    "build": "./node-modules/.bin/tsc -p ."
+    "build" : "tsc -p .",
+    "test" :  "tsc -p test/tsconfig.test.json && mocha",
+    "start": "node dist/examples/main.js",
+    "prestart" : "npm run build",
+    "prepublish" : "npm run build"
   },
   "author": "Johannes Hund (johannes.hund@gmail.com)",
   "license": "MIT",
   "devDependencies": {
     "@types/es6-promise": "0.0.32",
     "@types/node": "^6.0.45",
+    "mocha": "^3.2.0",
+    "mocha-typescript": "^1.0.15",
     "typescript": "^2.1.4",
     "wot-typescript-definitons": "^0.2.1"
   },
