--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
 		"noImplicitAny": true,
 		"removeComments": true,
 		"noLib": false,
-		"preserveConstEnums": true
+		"preserveConstEnums": true,
+		"experimentalDecorators": true
 	},
 	"include": [
 		"src/**/*"
