--- a/.gitignore
+++ b/.gitignore
@@ -39,5 +39,6 @@ jspm_packages
 # ignore dist
 dist/
 
-#ignore compiled tests
+#ignore compiled tests and scratch compiles
 test/**/*.js
+src/**/*.js
