--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "wot-typescript-definitons": "^0.2.1"
   },
   "dependencies": {
+    "typedjson": "git+https://github.com/JohnWeisz/TypedJSON.git",
     "typescript-collections": "^1.2.3",
     "winston": "^2.3.0"
   },
