first test for creating TD transformer between different TD versions

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,22 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+        
         {
             "type": "node",
             "request": "launch",
             "name": "Run example",
             "program": "${workspaceRoot}/dist/examples/main.js",
+            "cwd": "${workspaceRoot}",
+            "outFiles": [],
+            "sourceMaps": true,
+            "preLaunchTask": "build"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Run TDTransformer examples",
+            "program": "${workspaceRoot}/dist/examples/tdtransformer-examples.js",
             "cwd": "${workspaceRoot}",
             "outFiles": [],
             "sourceMaps": true,
