--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/chai": "^3.4.34",
     "@types/es6-promise": "0.0.32",
     "@types/node": "^6.0.45",
+    "@types/winston": "^2.2.0",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.15",
