--- a/package.json
+++ b/package.json
@@ -19,14 +19,13 @@
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.15",
+    "typedjson": "git+https://github.com/JohnWeisz/TypedJSON.git",
     "typescript": "^2.1.4",
-    "wot-typescript-definitons": "^0.2.3"
+    "wot-typescript-definitions": "^0.2.3"
   },
   "dependencies": {
-    "typedjson": "git+https://github.com/JohnWeisz/TypedJSON.git",
-    "typescript-collections": "^1.2.3",
-    "winston": "^2.3.0",
-    "coap": "^0.19.0"
+    "coap": "^0.19.0",
+    "winston": "^2.3.0"
   },
   "repository": {
     "type": "git",
