--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@types/chai": "^3.4.34",
     "@types/node": "^6.0.45",
     "@types/winston": "^2.2.0",
+    "@types/request-promise": "^4.1.1",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.15",
     "typedjson": "git+https://github.com/JohnWeisz/TypedJSON.git",
     "typescript": "^2.1.4",
-    "wot-typescript-definitions": "^0.2.3"
+    "wot-typescript-definitions": "^0.2.3",
+    "request": "^2.3.4",
+    "request-promise": "^4.1.1"
   },
   "dependencies": {
     "coap": "^0.19.0",
