--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"target": "ES6",
+		"target": "es2015",
 		//"lib" : ["ES5","ScriptHost","dom","es2015.collection","es2015.core","es2015.promise"] ,
 		"module": "commonjs",
 		"outDir": "dist",
