adding  test watch script

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "tsc -p test/tsconfig.test.json && mocha",
     "start": "node dist/examples/main.js",
     "prestart": "npm run build",
-    "prepublish": "npm run build"
+    "prepublish": "npm run build",
+    "dev-test-watch" : "mocha-typescript-watch -p test/tsconfig.test.json"
   },
   "author": "Johannes Hund (johannes.hund@gmail.com)",
   "license": "MIT",
