--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
-		"target": "es2015",
-		//"lib" : ["ES5","ScriptHost","dom","es2015.collection","es2015.core","es2015.promise"] ,
+		"target": "es5",
+		"lib" : ["ES2015","ScriptHost","dom"] ,
 		"module": "commonjs",
 		"outDir": "dist",
 		"sourceMap": true,
