--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "async": "^2.1.4",
     "coap": "^0.19.0",
+    "deasync": "^0.1.9",
     "winston": "^2.3.0"
   },
   "repository": {
