--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "typescript.tsdk": "./node_modules/typescript/lib",
+    "typescript.referencesCodeLens.enabled": true,
     "fileHeaderComment.parameter":{
     "*":{
         "author": "the thingweb community",
