--- a/packages/node-wot-helpers/package.json
+++ b/packages/node-wot-helpers/package.json
@@ -8,7 +8,8 @@
   "main": "dist/helper.js",
   "typings": "dist/helper.ts.d",
   "scripts": {
-    "test": "mocha --compilers ts:ts-node/register"
+    "test": "mocha --compilers ts:ts-node/register",
+    "build" : "tsc"
   },
   "author": "the thingweb community",
   "license": "MIT",
