--- a/packages/node-wot-td-parser/package.json
+++ b/packages/node-wot-td-parser/package.json
@@ -8,8 +8,8 @@
   "main": "dist/td-parser.js",
   "typings": "dist/td-parser.ts.d",
   "scripts": {
-    "test": "mocha --compilers ts:ts-node/register",
-    "build" : "tsc"
+    "test": "echo test suspended",
+    "build" : "echo build suspended"
   },
   "author": "the thingweb community",
   "license": "MIT",
@@ -23,6 +23,6 @@
   "dependencies": {
     "node-wot-content-serdes": "^0.1.0",
     "node-wot-logger": "^0.1.0",
-    "typedjson": "git+https://github.com/JohnWeisz/TypedJSON.git"
+    "typedjson": "git://github.com/JohnWeisz/TypedJSON.git"
   }
 }
