--- a/packages/node-wot-helpers/package.json
+++ b/packages/node-wot-helpers/package.json
@@ -5,8 +5,8 @@
     "dist/"
   ],
   "description": "Winston-based logger for node-wot",
-  "main": "dist/helper.js",
-  "typings": "dist/helper.ts.d",
+  "main": "dist/helpers.js",
+  "typings": "dist/helpers.d.ts",
   "scripts": {
     "test": "mocha --compilers ts:ts-node/register",
     "build" : "tsc"
