--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "dist/main.js",
   "scripts": {
     "build": "lerna run build",
-    "prebuild" : "npm run bootstrap",
+    "prebuild": "npm run bootstrap",
     "test": "lerna run test",
-    "pretest" : "npm run bootstrap",
+    "pretest": "npm run bootstrap",
     "start": "node dist/examples/servient-launcher.js",
     "prestart": "npm run build",
     "prepublish": "npm run build",
@@ -17,24 +17,9 @@
   "author": "Johannes Hund (johannes.hund@gmail.com)",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^3.4.34",
-    "@types/node": "^6.0.45",
-    "@types/request-promise": "^4.1.1",
-    "@types/winston": "^2.2.0",
-    "chai": "^3.5.0",
-    "lerna": "^2.0.0-beta.37",
-    "mocha": "^3.2.0",
-    "mocha-typescript": "^1.0.15",
-    "request": "^2.3.4",
-    "request-promise": "^4.1.1",
-    "typescript": "^2.1.4",
-    "wot-typescript-definitions": "^0.2.3"
+    "lerna": "^2.0.0-beta.37"
   },
   "dependencies": {
-    "async": "^2.1.4",
-    "coap": "^0.19.0",
-    "deasync": "^0.1.9",
-    "winston": "^2.3.0"
   },
   "repository": {
     "type": "git",
