--- a/packages/node-wot-protocols-coap-server/package.json
+++ b/packages/node-wot-protocols-coap-server/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "node-wot-servient",
+  "name": "node-wot-protocols-coap-server",
   "version": "0.1.0",
   "files": [
     "dist/"
   ],
-  "description": "a framework for creating servients (server+client) according the W3C WoT specifications",
-  "main": "dist/servient.js",
-  "typings": "dist/servient.d.ts",
+  "description": "an coap server plugin for node-wot",
+  "main": "dist/coap-server.js",
+  "typings": "dist/coap-server.d.ts",
   "scripts": {
-    "test": "mocha --compilers ts:ts-node/register",
     "build" : "tsc"
   },
   "author": "the thingweb community",
@@ -18,14 +17,11 @@
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.19",
     "ts-node": "^2.1.0",
-    "typescript": "^2.1.6",
-    "node-wot-protocols-http-server": "^0.1.0"
+    "typescript": "^2.1.6"
   },
   "dependencies": {
     "node-wot-logger": "^0.1.0",
-    "node-wot-helpers": "^0.1.0",
     "node-wot-content-serdes": "^0.1.0",
-    "node-wot-td-parser" : "^0.1.0",
     "node-wot-protocols" : "^0.1.0"
   }
 }
