adding dep on definitions

--- a/packages/node-wot-servient/package.json
+++ b/packages/node-wot-servient/package.json
@@ -9,7 +9,7 @@
   "typings": "dist/servient.d.ts",
   "scripts": {
     "test": "mocha --compilers ts:ts-node/register",
-    "build" : "tsc"
+    "build": "tsc"
   },
   "author": "the thingweb community",
   "license": "MIT",
@@ -22,10 +22,11 @@
     "node-wot-protocols-http-server": "^0.1.0"
   },
   "dependencies": {
-    "node-wot-logger": "^0.1.0",
-    "node-wot-helpers": "^0.1.0",
     "node-wot-content-serdes": "^0.1.0",
-    "node-wot-td-tools" : "^0.1.0",
-    "node-wot-protocols" : "^0.1.0"
+    "node-wot-helpers": "^0.1.0",
+    "node-wot-logger": "^0.1.0",
+    "node-wot-protocols": "^0.1.0",
+    "node-wot-td-tools": "^0.1.0",
+    "wot-typescript-definitions": "^0.2.3"
   }
 }
