--- a/packages/node-wot-protocols-http-client/package.json
+++ b/packages/node-wot-protocols-http-client/package.json
@@ -5,8 +5,8 @@
     "dist/"
   ],
   "description": "an http client plugin for node-wot",
-  "main": "dist/http-client.js",
-  "typings": "dist/http-client.d.ts",
+  "main": "dist/http-client-factory.js",
+  "typings": "dist/http-client-factory.d.ts",
   "scripts": {
     "build" : "tsc"
   },
