--- a/packages/node-wot-td-tools/package.json
+++ b/packages/node-wot-td-tools/package.json
@@ -9,7 +9,7 @@
   "typings": "dist/td-tools.d.ts",
   "scripts": {
     "test": "mocha --compilers ts:ts-node/register",
-    "build" : "tsc"
+    "build": "tsc"
   },
   "author": "the thingweb community",
   "license": "MIT",
@@ -18,6 +18,7 @@
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.19",
     "ts-node": "^2.1.0",
+    "typedjson": "github:johnweisz/TypedJSON",
     "typescript": "^2.1.6"
   },
   "dependencies": {
