--- a/packages/node-wot-protocols-coap-client/package.json
+++ b/packages/node-wot-protocols-coap-client/package.json
@@ -13,6 +13,7 @@
   "author": "the thingweb community",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^3.4.35",
     "@types/node": "^7.0.5",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
