--- a/packages/node-wot-protocols-http-server/package.json
+++ b/packages/node-wot-protocols-http-server/package.json
@@ -14,16 +14,21 @@
   "author": "the thingweb community",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^3.4.35",
     "@types/node": "^7.0.5",
+    "@types/request-promise": "^4.1.33",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.19",
+    "request": "^2.79.0",
+    "request-promise": "^4.1.1",
     "ts-node": "^2.1.0",
     "typescript": "^2.1.6"
   },
   "dependencies": {
-    "node-wot-logger": "^0.1.0",
+    "deasync": "^0.1.9",
     "node-wot-content-serdes": "^0.1.0",
+    "node-wot-logger": "^0.1.0",
     "node-wot-protocols": "^0.1.0"
   }
 }
