--- a/packages/node-wot-td-tools/package.json
+++ b/packages/node-wot-td-tools/package.json
@@ -14,6 +14,7 @@
   "author": "the thingweb community",
   "license": "MIT",
   "devDependencies": {
+    "@types/chai": "^3.4.35",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.19",
