--- a/packages/node-wot-content-serdes/package.json
+++ b/packages/node-wot-content-serdes/package.json
@@ -15,6 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chai": "^3.4.35",
+    "@types/node": "^7.0.5",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.19",
