--- a/packages/node-wot-privileged-scripts/package.json
+++ b/packages/node-wot-privileged-scripts/package.json
@@ -20,7 +20,7 @@
     "typescript-standard": "^0.3.14"
   },
   "bin": {
-    "respberry-servient": "dist/respberry-servient.js"
+    "respberry-servient": "dist/raspberry-servient.js"
   },
   "dependencies": {
     "wot-typescript-definitions": "^0.2.3",
