--- a/packages/node-wot-privileged-scripts/package.json
+++ b/packages/node-wot-privileged-scripts/package.json
@@ -9,7 +9,7 @@
   "main": "dist/raspberry-servient.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/respberry-servient.ts"
+    "start": "ts-node src/raspberry-servient.ts"
   },
   "author": "the thingweb community",
   "license": "MIT",
@@ -20,7 +20,7 @@
     "typescript-standard": "^0.3.14"
   },
   "bin": {
-    "respberry-servient": "dist/raspberry-servient.js"
+    "raspberry-servient": "dist/raspberry-servient.js"
   },
   "dependencies": {
     "wot-typescript-definitions": "^0.2.3",
