--- a/packages/node-wot-logger/package.json
+++ b/packages/node-wot-logger/package.json
@@ -8,13 +8,15 @@
   "main": "dist/logger.js",
   "typings": "dist/logger.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "codestyle" : "standard --pretty"
   },
   "author": "the thingweb community",
   "license": "MIT",
   "devDependencies": {
     "@types/winston": "^2.2.0",
-    "typescript": "^2.1.6"
+    "typescript": "^2.1.6",
+    "typescript-standard": "^0.3.30"
   },
   "dependencies": {
     "winston": "^2.3.1"
