--- a/packages/node-wot-protocols-coap-client/package.json
+++ b/packages/node-wot-protocols-coap-client/package.json
@@ -8,7 +8,8 @@
   "main": "dist/coap-client-factory.js",
   "typings": "dist/coap-client-factory.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "codestyle" : "standard --pretty"
   },
   "author": "the thingweb community",
   "license": "MIT",
@@ -19,7 +20,8 @@
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.19",
     "ts-node": "^2.1.0",
-    "typescript": "^2.1.6"
+    "typescript": "^2.1.6",
+    "typescript-standard": "^0.3.30"
   },
   "dependencies": {
     "coap": "^0.20.0",
