--- a/packages/node-wot-protocols-http-server/package.json
+++ b/packages/node-wot-protocols-http-server/package.json
@@ -9,7 +9,8 @@
   "typings": "dist/http-server.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "mocha --compilers ts:ts-node/register"
+    "test": "mocha --compilers ts:ts-node/register",
+    "codestyle" : "standard --pretty"
   },
   "author": "the thingweb community",
   "license": "MIT",
@@ -23,7 +24,8 @@
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "ts-node": "^2.1.0",
-    "typescript": "^2.1.6"
+    "typescript": "^2.1.6",
+    "typescript-standard": "^0.3.30"
   },
   "dependencies": {
     "deasync": "^0.1.9",
