--- a/packages/node-wot-td-tools/package.json
+++ b/packages/node-wot-td-tools/package.json
@@ -9,7 +9,8 @@
   "typings": "dist/td-tools.d.ts",
   "scripts": {
     "test": "mocha --compilers ts:ts-node/register",
-    "build": "tsc"
+    "build": "tsc",
+    "codestyle" : "standard --pretty"
   },
   "author": "the thingweb community",
   "license": "MIT",
@@ -19,7 +20,8 @@
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.19",
     "ts-node": "^2.1.0",
-    "typescript": "^2.1.6"
+    "typescript": "^2.1.6",
+    "typescript-standard": "^0.3.30"
   },
   "dependencies": {
     "node-wot-helpers": "^0.1.0",
