--- a/packages/node-wot/package.json
+++ b/packages/node-wot/package.json
@@ -9,7 +9,8 @@
   "typings": "dist/index.d.ts",
   "scripts": {
     "test": "mocha --compilers ts:ts-node/register",
-    "build": "tsc"
+    "build": "tsc",
+    "codestyle" : ""
   },
   "author": "the thingweb community",
   "license": "MIT",
@@ -20,7 +21,8 @@
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.19",
     "ts-node": "^2.1.0",
-    "typescript": "^2.1.6"
+    "typescript": "^2.1.6",
+    "typescript-standard": "^0.3.30"
   },
   "bin": {
     "wot-servient": "dist/command-line-tool/wot-servient.js"
