--- a/packages/raspberry-demo-servient/package.json
+++ b/packages/raspberry-demo-servient/package.json
@@ -24,6 +24,7 @@
     "raspberry-servient": "dist/raspberry-servient.js"
   },
   "dependencies": {
+    "wot-typescript-definitions": "0.2.3",
     "node-wot": "^0.2.0",
     "node-wot-protocols-coap-server": "^0.1.0"
   }
