--- a/packages/node-wot-content-serdes/package.json
+++ b/packages/node-wot-content-serdes/package.json
@@ -21,7 +21,7 @@
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.19",
     "ts-node": "^2.1.0",
-    "typescript": "^2.1.6",
+    "typescript": "2.3.2",
     "typescript-standard": "^0.3.30"
   },
   "dependencies": {
