--- a/packages/node-wot-logger/package.json
+++ b/packages/node-wot-logger/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/winston": "^2.2.0",
-    "typescript": "^2.1.6",
+    "typescript": "2.3.2",
     "typescript-standard": "^0.3.30"
   },
   "dependencies": {
