--- a/packages/node-wot-protocols-http-server/package.json
+++ b/packages/node-wot-protocols-http-server/package.json
@@ -24,7 +24,7 @@
     "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "ts-node": "^2.1.0",
-    "typescript": "^2.1.6",
+    "typescript": "2.3.2",
     "typescript-standard": "^0.3.30"
   },
   "dependencies": {
