--- a/packages/raspberry-demo-servient/package.json
+++ b/packages/raspberry-demo-servient/package.json
@@ -17,7 +17,7 @@
   "devDependencies": {
     "@types/node": "^7.0.5",
     "ts-node": "^2.1.0",
-    "typescript": "^2.1.6",
+    "typescript": "2.3.2",
     "typescript-standard": "^0.3.30"
   },
   "bin": {
