--- a/packages/node-wot-td-tools/package.json
+++ b/packages/node-wot-td-tools/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/chai": "^3.4.35",
+    "@types/node": "^7.0.5",
     "chai": "^3.5.0",
     "mocha": "^3.2.0",
     "mocha-typescript": "^1.0.19",
@@ -25,7 +26,6 @@
   },
   "dependencies": {
     "node-wot-helpers": "^0.1.0",
-    "node-wot-logger": "^0.1.0",
     "typedjson-npm": "^0.1.7"
   }
 }
