--- a/packages/node-wot-protocols-http-client/package.json
+++ b/packages/node-wot-protocols-http-client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-wot-protocols-http-client",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "files": [
     "dist/"
   ],
@@ -24,6 +24,6 @@
     "typescript-standard": "^0.3.30"
   },
   "dependencies": {
-    "node-wot-protocols": "^0.1.0"
+    "node-wot-protocols": "0.3.0"
   }
 }
