--- a/packages/node-wot-td-tools/package.json
+++ b/packages/node-wot-td-tools/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-wot-td-tools",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "files": [
     "dist/"
   ],
@@ -25,7 +25,7 @@
     "typescript-standard": "^0.3.30"
   },
   "dependencies": {
-    "node-wot-helpers": "^0.1.0",
+    "node-wot-helpers": "0.3.0",
     "typedjson-npm": "^0.1.7"
   }
 }
