--- a/packages/raspberry-demo-servient/package.json
+++ b/packages/raspberry-demo-servient/package.json
@@ -1,6 +1,6 @@
 {
   "name": "raspberry-demo-servient",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "private": true,
   "files": [
     "dist/"
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "wot-typescript-definitions": "0.2.3",
-    "node-wot": "^0.2.0",
-    "node-wot-protocols-coap-server": "^0.1.0"
+    "node-wot": "0.3.0",
+    "node-wot-protocols-coap-server": "0.3.0"
   }
 }
