--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "author": "Johannes Hund (johannes.hund@gmail.com)",
   "license": "MIT",
   "devDependencies": {
-    "lerna": "^2.0.0-beta.38",
+    "lerna": "2.1.1",
     "lerna-run": "0.0.2",
     "typescript": "2.3.2",
     "typescript-standard": "^0.3.30"
