update all package dependencies to a given version by removing all "^" (which indicates newer versions are allowed also).
Note1: In the past different (newer) versions caused issues and make it difficult to reproduce issues...
Note2: To make it work some dependencies had to be updated

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "lerna": "2.1.1",
     "lerna-run": "0.0.2",
     "typescript": "2.3.2",
-    "typescript-standard": "^0.3.30"
+    "typescript-standard": "0.3.30"
   },
   "dependencies": {},
   "repository": {
