--- a/packages/node-wot-protocols-file-client/package.json
+++ b/packages/node-wot-protocols-file-client/package.json
@@ -14,14 +14,14 @@
   "author": "the thingweb community",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^3.4.35",
-    "@types/node": "^7.0.5",
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0",
-    "mocha-typescript": "^1.0.19",
-    "ts-node": "^2.1.0",
-    "typescript": "2.3.2",
-    "typescript-standard": "^0.3.30"
+    "@types/chai": "4.0.4",
+    "@types/node": "8.0.28",
+    "chai": "4.1.2",
+    "mocha": "3.5.3",
+    "mocha-typescript": "1.1.8",
+    "ts-node": "3.3.0",
+    "typescript": "2.5.2",
+    "typescript-standard": "0.3.30"
   },
   "dependencies": {
     "node-wot-protocols": "0.3.0"
