--- a/packages/node-wot-protocols-http-server/package.json
+++ b/packages/node-wot-protocols-http-server/package.json
@@ -15,20 +15,20 @@
   "author": "the thingweb community",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^3.4.35",
-    "@types/node": "^7.0.5",
-    "@types/request-promise": "^4.1.33",
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0",
-    "mocha-typescript": "^1.0.19",
-    "request": "^2.79.0",
-    "request-promise": "^4.1.1",
-    "ts-node": "^2.1.0",
-    "typescript": "2.3.2",
-    "typescript-standard": "^0.3.30"
+    "@types/chai": "4.0.4",
+    "@types/node": "8.0.28",
+    "@types/request-promise": "4.1.37",
+    "chai": "4.1.2",
+    "mocha": "3.5.3",
+    "mocha-typescript": "1.1.8",
+    "request": "2.79.0",
+    "request-promise": "4.1.1",
+    "ts-node": "3.3.0",
+    "typescript": "2.5.2",
+    "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "deasync": "^0.1.9",
+    "deasync": "0.1.9",
     "node-wot-content-serdes": "0.3.0",
     "node-wot-protocols": "0.3.0"
   }
