--- a/packages/node-wot/package.json
+++ b/packages/node-wot/package.json
@@ -15,14 +15,14 @@
   "author": "the thingweb community",
   "license": "MIT",
   "devDependencies": {
-    "@types/chai": "^3.4.35",
-    "@types/node": "^7.0.5",
-    "chai": "^3.5.0",
-    "mocha": "^3.2.0",
-    "mocha-typescript": "^1.0.19",
-    "ts-node": "^2.1.0",
-    "typescript": "2.3.2",
-    "typescript-standard": "^0.3.30"
+    "@types/chai": "4.0.4",
+    "@types/node": "8.0.28",
+    "chai": "4.1.2",
+    "mocha": "3.5.3",
+    "mocha-typescript": "1.1.8",
+    "ts-node": "3.3.0",
+    "typescript": "2.5.2",
+    "typescript-standard": "0.3.30"
   },
   "bin": {
     "wot-servient": "dist/command-line-tool/wot-servient.js"
@@ -32,7 +32,7 @@
     "node-wot-helpers": "0.3.0",
     "node-wot-protocols": "0.3.0",
     "node-wot-td-tools": "0.3.0",
-    "wot-typescript-definitions": "^0.2.3",
+    "wot-typescript-definitions": "0.2.3",
     "node-wot-protocols-http-client": "0.3.0",
     "node-wot-protocols-http-server": "0.3.0"
   }
