--- a/packages/raspberry-demo-servient/package.json
+++ b/packages/raspberry-demo-servient/package.json
@@ -15,10 +15,10 @@
   "author": "the thingweb community",
   "license": "MIT",
   "devDependencies": {
-    "@types/node": "^7.0.5",
-    "ts-node": "^2.1.0",
-    "typescript": "2.3.2",
-    "typescript-standard": "^0.3.30"
+    "@types/node": "8.0.28",
+    "ts-node": "3.3.0",
+    "typescript": "2.5.2",
+    "typescript-standard": "0.3.30"
   },
   "bin": {
     "raspberry-servient": "dist/raspberry-servient.js"
