--- a/packages/node-wot-protocols-coap-server/package.json
+++ b/packages/node-wot-protocols-coap-server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-wot-protocols-coap-server",
-  "version": "0.3.0",
+  "version": "0.3.0-SNAPSHOT.1",
   "files": [
     "dist/"
   ],
@@ -27,7 +27,7 @@
   "dependencies": {
     "coap": "0.20.0",
     "deasync": "0.1.9",
-    "node-wot-content-serdes": "0.3.0",
-    "node-wot-protocols": "0.3.0"
+    "node-wot-content-serdes": "0.3.0-SNAPSHOT.1",
+    "node-wot-protocols": "0.3.0-SNAPSHOT.1"
   }
 }
