change MIT license to W3C Software License (see https://github.com/thingweb/node-wot/pull/59)

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "codestyle": "lerna run codestyle"
   },
   "author": "Johannes Hund (johannes.hund@gmail.com)",
-  "license": "MIT",
+  "license": "W3C Software License",
   "devDependencies": {
     "lerna": "2.1.1",
     "lerna-run": "0.0.2",
