--- a/packages/raspberry-demo-servient/package.json
+++ b/packages/raspberry-demo-servient/package.json
@@ -13,7 +13,7 @@
     "codestyle" : "standard --pretty"
   },
   "author": "the thingweb community",
-  "license": "MIT",
+  "license": "W3C Software License",
   "devDependencies": {
     "@types/node": "8.0.28",
     "ts-node": "3.3.0",
