--- a/packages/node-wot-protocol-http/package.json
+++ b/packages/node-wot-protocol-http/package.json
@@ -1,14 +1,15 @@
 {
-  "name": "node-wot-protocols-http-client",
+  "name": "node-wot-protocol-http",
   "version": "0.3.0-SNAPSHOT.2",
   "files": [
     "dist/"
   ],
-  "description": "an http client plugin for node-wot",
-  "main": "dist/http-client-factory.js",
-  "typings": "dist/http-client-factory.d.ts",
+  "description": "an http server & client plugin for node-wot",
+  "main": "dist/http.js",
+  "typings": "dist/http.d.ts",
   "scripts": {
     "build": "tsc",
+    "test": "mocha --compilers ts:ts-node/register",
     "codestyle" : "standard --pretty"
   },
   "author": "the thingweb community",
@@ -16,14 +17,19 @@
   "devDependencies": {
     "@types/chai": "4.0.4",
     "@types/node": "8.0.28",
+    "@types/request-promise": "4.1.37",
     "chai": "4.1.2",
     "mocha": "3.5.3",
     "mocha-typescript": "1.1.8",
+    "request": "2.79.0",
+    "request-promise": "4.1.1",
     "ts-node": "3.3.0",
     "typescript": "2.5.2",
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
+    "deasync": "0.1.9",
+    "node-wot-content-serdes": "0.3.0-SNAPSHOT.2",
     "node-wot-protocols": "0.3.0-SNAPSHOT.2"
   }
 }
