Move File Client to package node-wot-protocol-file

--- a/packages/node-wot-protocol-file/package.json
+++ b/packages/node-wot-protocol-file/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-wot-protocols-file-client",
+  "name": "node-wot-protocol-file",
   "version": "0.3.0-SNAPSHOT.2",
   "files": [
     "dist/"
