--- a/packages/node-wot-servient-examples/package.json
+++ b/packages/node-wot-servient-examples/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "raspberry-demo-servient",
+  "name": "node-wot-servient-examples",
   "version": "0.3.0-SNAPSHOT.2",
-  "private": true,
   "files": [
     "dist/"
   ],
@@ -26,6 +25,8 @@
   "dependencies": {
     "wot-typescript-definitions": "0.2.3",
     "node-wot": "0.3.0-SNAPSHOT.2",
-    "node-wot-protocol-coap": "0.3.0-SNAPSHOT.2"
+	"node-wot-td-tools": "0.3.0-SNAPSHOT.2",
+    "node-wot-protocol-coap": "0.3.0-SNAPSHOT.2",
+	"node-wot-protocol-http": "0.3.0-SNAPSHOT.2"
   }
 }
