!!Intermediary check-in!!
try to to move "content-serdes" and "wot-protocol" to main node-wot (fails, not sure why!?!)

Error messages fails when building node-wot by saying
lerna ERR! build Errored while running script in 'node-wot-protocol-file'

Strange: 'node-wot-protocol-file' is not known to "node-wot" ...

Further error messages complain about WoT namespace!?

lerna ERR! execute ../node-wot/dist/consumed-thing.d.ts(3,47): error TS2503: Can not find namespace 'WoT'.

--- a/packages/node-wot-protocol-coap/package.json
+++ b/packages/node-wot-protocol-coap/package.json
@@ -27,7 +27,6 @@
   "dependencies": {
     "coap": "0.20.0",
     "deasync": "0.1.9",
-    "node-wot-content-serdes": "0.3.0-SNAPSHOT.2",
-    "node-wot-protocols": "0.3.0-SNAPSHOT.2"
+    "node-wot": "0.3.0-SNAPSHOT.2"
   }
 }
