--- a/packages/node-wot-protocol-http/package.json
+++ b/packages/node-wot-protocol-http/package.json
@@ -29,7 +29,6 @@
   },
   "dependencies": {
     "deasync": "0.1.9",
-    "node-wot-content-serdes": "0.3.0-SNAPSHOT.2",
-    "node-wot-protocols": "0.3.0-SNAPSHOT.2"
+    "node-wot": "0.3.0-SNAPSHOT.2"
   }
 }
