--- a/packages/node-wot-servient-examples/package.json
+++ b/packages/node-wot-servient-examples/package.json
@@ -20,13 +20,14 @@
     "typescript-standard": "0.3.30"
   },
   "bin": {
-    "raspberry-servient": "dist/raspberry-servient.js"
+    "raspberry-servient": "dist/raspberry-servient.js",
+	"wot-servient": "dist/command-line-tool/wot-servient.js"
   },
   "dependencies": {
     "wot-typescript-definitions": "0.2.3",
     "node-wot": "0.3.0-SNAPSHOT.2",
-	"node-wot-td-tools": "0.3.0-SNAPSHOT.2",
+	  "node-wot-td-tools": "0.3.0-SNAPSHOT.2",
     "node-wot-protocol-coap": "0.3.0-SNAPSHOT.2",
-	"node-wot-protocol-http": "0.3.0-SNAPSHOT.2"
+	  "node-wot-protocol-http": "0.3.0-SNAPSHOT.2"
   }
 }
