--- a/packages/node-wot/package.json
+++ b/packages/node-wot/package.json
@@ -24,14 +24,8 @@
     "typescript": "2.5.2",
     "typescript-standard": "0.3.30"
   },
-  "bin": {
-    "wot-servient": "dist/command-line-tool/wot-servient.js"
-  },
   "dependencies": {
-    "node-wot-content-serdes": "0.3.0-SNAPSHOT.2",
-    "node-wot-protocols": "0.3.0-SNAPSHOT.2",
     "node-wot-td-tools": "0.3.0-SNAPSHOT.2",
-    "wot-typescript-definitions": "0.2.3",
-    "node-wot-protocol-http": "0.3.0-SNAPSHOT.2"
+    "wot-typescript-definitions": "0.2.3"
   }
 }
