--- a/packages/node-wot-protocol-http/package.json
+++ b/packages/node-wot-protocol-http/package.json
@@ -25,7 +25,8 @@
     "request-promise": "4.1.1",
     "ts-node": "3.3.0",
     "typescript": "2.5.2",
-    "typescript-standard": "0.3.30"
+    "typescript-standard": "0.3.30",
+    "node-wot-td-tools": "0.3.0-SNAPSHOT.2"
   },
   "dependencies": {
     "deasync": "0.1.9",
