* first step towards FPWD API support Note: lots of TODOs and test files commented out

--- a/packages/node-wot-servient-examples/package.json
+++ b/packages/node-wot-servient-examples/package.json
@@ -24,8 +24,8 @@
 	"wot-servient": "dist/command-line-tool/wot-servient.js"
   },
   "dependencies": {
-    "wot-typescript-definitions": "0.2.3",
     "node-wot": "0.3.0-SNAPSHOT.3",
+    "wot-typescript-definitions": "0.3.0-SNAPSHOT.3",
 	  "node-wot-td-tools": "0.3.0-SNAPSHOT.3",
     "node-wot-protocol-coap": "0.3.0-SNAPSHOT.3",
 	  "node-wot-protocol-http": "0.3.0-SNAPSHOT.3"
