--- a/packages/node-wot/package.json
+++ b/packages/node-wot/package.json
@@ -26,6 +26,6 @@
   },
   "dependencies": {
     "node-wot-td-tools": "0.3.0-SNAPSHOT.3",
-    "wot-typescript-definitions": "0.2.3"
+    "wot-typescript-definitions": "0.3.0-SNAPSHOT.3"
   }
 }
