--- a/packages/node-wot-servient-examples/package.json
+++ b/packages/node-wot-servient-examples/package.json
@@ -28,6 +28,7 @@
     "wot-typescript-definitions": "0.3.0-SNAPSHOT.5",
     "node-wot-td-tools": "0.3.0-SNAPSHOT.5",
     "node-wot-protocol-coap": "0.3.0-SNAPSHOT.5",
-    "node-wot-protocol-http": "0.3.0-SNAPSHOT.5"
+    "node-wot-protocol-http": "0.3.0-SNAPSHOT.5",
+    "node-wot-protocol-file": "0.3.0-SNAPSHOT.5"
   }
 }
