--- a/packages/node-wot-td-tools/package.json
+++ b/packages/node-wot-td-tools/package.json
@@ -25,6 +25,7 @@
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
+    "wot-typescript-definitions": "0.4.0-SNAPSHOT.5",
     "reflect-metadata": "0.1.10",
     "class-transformer": "0.1.8"
   }
