--- a/packages/node-wot-td-tools/tsconfig.json
+++ b/packages/node-wot-td-tools/tsconfig.json
@@ -1,7 +1,7 @@
 {
 	"compilerOptions": {
 		"target": "es5",
-		"lib" : ["ES2015","ScriptHost"],
+		"lib" : ["es2015","dom"],
 		"module": "commonjs",
 		"outDir": "dist",
 		"sourceMap": true,
