--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "@node-wot/servient-examples",
+  "name": "@node-wot/cli",
   "version": "0.3.0-SNAPSHOT.7",
   "files": [
     "dist/"
   ],
-  "description": "Example servient used in raspberry-pi demo with unicornhat",
-  "main": "dist/raspberry-servient.js",
+  "description": "servient command line interface",
+  "main": "dist/cli.js",
   "scripts": {
     "build": "tsc",
-    "start": "ts-node src/raspberry-servient.ts",
     "codestyle": "standard --pretty"
   },
   "author": "the thingweb community",
@@ -20,14 +19,14 @@
     "typescript-standard": "0.3.30"
   },
   "bin": {
-    "raspberry-servient": "dist/raspberry-servient.js"
+    "wot-servient": "dist/cli.js"
   },
   "dependencies": {
     "wot-typescript-definitions": "0.3.0-SNAPSHOT.8",
     "@node-wot/core": "0.3.0-SNAPSHOT.7",
     "@node-wot/td-tools": "0.3.0-SNAPSHOT.7",
-    "@node-wot/binding-coap": "0.3.0-SNAPSHOT.7",
     "@node-wot/binding-http": "0.3.0-SNAPSHOT.7",
+    "@node-wot/binding-coap": "0.3.0-SNAPSHOT.7",
     "@node-wot/binding-file": "0.3.0-SNAPSHOT.7"
   }
 }
