--- a/packages/node-wot-protocol-http/package.json
+++ b/packages/node-wot-protocol-http/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "node-wot-protocol-http",
-  "version": "0.3.0-SNAPSHOT.6",
+  "name": "@node-wot/binding-http",
+  "version": "0.3.0-SNAPSHOT.7",
   "files": [
     "dist/"
   ],
@@ -26,9 +26,9 @@
     "ts-node": "3.3.0",
     "typescript": "2.5.2",
     "typescript-standard": "0.3.30",
-    "node-wot-td-tools": "0.3.0-SNAPSHOT.6"
+    "@node-wot/td-tools": "0.3.0-SNAPSHOT.7"
   },
   "dependencies": {
-    "node-wot": "0.3.0-SNAPSHOT.6"
+    "@node-wot/core": "0.3.0-SNAPSHOT.7"
   }
 }
