--- a/packages/node-wot/package.json
+++ b/packages/node-wot/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "node-wot",
-  "version": "0.3.0-SNAPSHOT.6",
+  "name": "@node-wot/core",
+  "version": "0.3.0-SNAPSHOT.7",
   "files": [
     "dist/"
   ],
   "description": "a framework for creating servients (server+client) according the W3C WoT specifications",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "main": "dist/core.js",
+  "typings": "dist/core.d.ts",
   "scripts": {
     "test": "mocha --compilers ts:ts-node/register",
     "build": "tsc",
@@ -25,7 +25,7 @@
     "typescript-standard": "0.3.30"
   },
   "dependencies": {
-    "node-wot-td-tools": "0.3.0-SNAPSHOT.6",
+    "@node-wot/td-tools": "0.3.0-SNAPSHOT.7",
     "wot-typescript-definitions": "0.3.0-SNAPSHOT.8"
   }
 }
